2009-02-11  Matthias Clasen  <mclasen@redhat.com>

	Bug 557921 – [PATCH] Sound event support to metacity

	Patch by Lennart Poettering

	* configure.in: Require libcanberra-gtk

	* src/core/bell.c (meta_bell_notify): Play the alert sound from
	the sound theme instead of the dreaded system bell.

	* src/core/workspace.c (meta_workspace_activate_with_focus): Play
	a sound on workspace switch.

2009-02-11  Thomas Thurman  <tthurman@gnome.org>

        Session must be saved before display close, and display
        shouldn't close during shutdown if it's already closed.
        Can't believe we don't have a bug about this already...

	* src/core/display-private.h:
	* src/core/display.c:
	* src/core/main.c:
	* src/core/session.c:

2009-02-10  Matt Kraai  <kraai@ftfbs.org>

        Don't define meta_spew_event unless verbose mode is on.
	Closes #571126.

	* src/core/display.c:
	* src/core/window.c:

2009-02-10  Matt Kraai  <kraai@ftfbs.org>

	* README: switch is "--disable-verbose-mode", not "--disable-verbose".
          Closes #571210.

2009-02-10  Thomas Thurman  <tthurman@gnome.org>

        rm incorrect comment

	* src/include/util.h:

2009-02-10  Thomas Thurman  <tthurman@gnome.org>

        Further movement of code out of metacity-dialog into Zenity;
        this time it's the "kill or wait?" dialogue.  Much code saved.

	* src/core/delete.c:
	* src/core/keybindings.c:
	* src/core/main.c:
	* src/core/util.c:
	* src/core/window-private.h:
	* src/core/window.c:
	* src/include/util.h:

2009-02-07  Thomas Thurman  <tthurman@gnome.org>

        Windows demanding attention should never appear in the
        alt-tab list unless they're of a type which might have appeared
        there anyway.  This solves a problem under AWN where docks which were
        marked as demanding attention appeared in all alt-tab lists;
        they were irrelevant and it was impossible to remove them from the
        lists.

	* src/core/display.c:
